--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/LibrariesHacked/ifla-librarydata/issues"
   },
-  "homepage": "https://github.com/LibrariesHacked/ifla-librarydata#readme"
+  "homepage": "https://github.com/LibrariesHacked/ifla-librarydata#readme",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.0",
+    "bulma": "^0.7.2",
+    "datatables-bulma": "^1.0.1",
+    "datatables.net-dt": "^1.10.19",
+    "jquery": "^3.3.1",
+    "papaparse": "^4.6.2"
+  }
 }
